--- a/detail-kep-umm.html
+++ b/detail-kep-umm.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="owl.theme.default.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
-    <link
-      rel="stylesheet"
-      href="http://bukitmakmur-kotim.desa.id/themes/default/assets/css/theme-elements.css"
-    />
+    <link rel="stylesheet" href="theme.css" />
 
     <link
       rel="stylesheet"
@@ -221,11 +218,11 @@
         </div>
       </div>
     </section>
-    <section id="Stuktur" class="stuktur-desa mb-100">
+    <section id="Stuktur" class="stuktur-desa py-5">
       <div class="row">
         <div class="col-md-3">
           <ul class="nav nav-list flex-column mb-5">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="stuktur.html">Struktur Organisasi</a>
             </li>
             <li class="nav-item">
@@ -249,7 +246,7 @@
                 >Kepala Seksi Pelayanan
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="detail-kep-umm.html"
                 >Kepala urusan Umum
               </a>
@@ -261,22 +258,53 @@
             </li>
           </ul>
         </div>
-
-        <div class="col-md-9 s-org">
-          <h3 class="text-primary text-center text-dark display-5 m-5">
+        <div class="col-md-9">
+          <h3 class="text-primary text-dark">
             <strong>Struktur Organisasi</strong>
           </h3>
           <div class="row">
-            <div class="col-md-12 text-center">
-              <img
-                src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/images/struktur-organisasi-desa.png"
-                class="img-responsive"
-              />
+            <div class="col-md-12">
+              <table class="table -table-striped">
+                <tbody>
+                  <tr>
+                    <th width="15%" nowrap class="b-none">Jabatan</th>
+                    <td width="1px" class="b-none">:</td>
+                    <td class="b-none">Kepala Urusan Umum</td>
+                  </tr>
+                  <tr>
+                    <th width="15%" nowrap>Nama Pejabat</th>
+                    <td width="1px">:</td>
+                    <td>
+                      <button
+                        type="button"
+                        href="http://bukitmakmur-kotim.desa.id/pegawai/detail/25952"
+                        class="btn btn-sm btn-default pull-right btn-light"
+                      >
+                        Detail Pegawai <i class="fa fa-share"></i>
+                      </button>
+                      Nurhayati
+                    </td>
+                  </tr>
+                  <tr>
+                    <th width="15%" nowrap>NIP</th>
+                    <td width="1px">:</td>
+                    <td>
+                      <small>--</small>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <blockquote>
+                <p>NAMA : Nurhayati</p>
+                <p>TTL :&nbsp;--</p>
+                <p>AGAMA : --</p>
+              </blockquote>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- BEGIN PRE-FOOTER -->
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
