--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="owl.theme.default.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -260,6 +261,7 @@
       </div>
     </section>
 
+    <!--bar menu-->
     <section class="bar-menu mb-100">
       <div class="container-fluid">
         <div
@@ -271,7 +273,7 @@
             border: none;
           "
         >
-          <div class="main-bar-menu col-md col-sm-6 col-6 text-center py-3">
+          <div class="main-bar-menu col-md-6 col-sm-12 col-6 text-center py-3">
             <a
               href="index.html"
               style="
@@ -335,7 +337,7 @@
       </div>
     </section>
 
-    <section id="profil" class="data-penduduk">
+    <!--section id="profil" class="data-penduduk">
       <div class="container">
         <h2 class="text-data-penduduk">Data Penduduk</h2>
         <div
@@ -360,7 +362,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section-->
 
     <section id="berita" class="berita-terbaru py-5">
       <div class="container">
