--- a/potensi-penduduk.html
+++ b/potensi-penduduk.html
@@ -159,7 +159,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -207,7 +207,7 @@
                   </a>
                 </li>
 
-                <li class="breadcrumb-item active" style="color: black">
+                <li class="breadcrumb-item1 active" style="color: black">
                   Potensi Desa
                 </li>
               </ol>
