--- a/potensi-wilayah.html
+++ b/potensi-wilayah.html
@@ -238,7 +238,7 @@
                 <div class="col-md-6 mt-xl">
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Batas Wilayah Desa</h5>
+                      <h5 class="panel-title">Batas Wilayah Desa</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -319,7 +319,7 @@
                 <div class="col-md-6">
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Jenis Lahan</h5>
+                      <h5 class="panel-title">Jenis Lahan</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -779,7 +779,7 @@
                   <!-- ## ORBITASI DESA ## -->
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Orbitasi Desa</h5>
+                      <h5 class="panel-title">Orbitasi Desa</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -890,7 +890,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Potensi Wisata</h5>
+                      <h5 class="panel-title">Potensi Wisata</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
