--- a/lembaga.html
+++ b/lembaga.html
@@ -81,7 +81,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -155,7 +155,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -181,7 +181,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
@@ -237,17 +237,12 @@
                     <tbody>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/badan-permusyawaratan-desa-6202162006"
-                            >BADAN PERMUSYAWARATAN DESA</a
-                          >
+                          <a href="">BADAN PERMUSYAWARATAN DESA</a>
                           <br />
                           <span class="label label-primary">BPD</span>
                         </td>
                         <td>
-                          <small
-                            >JL. BARITO RT 002 /RW 001 DESA BUKIT MAKMUR</small
-                          >
+                          <small>JL. </small>
                         </td>
                         <td class="text-center">
                           <img
@@ -258,15 +253,12 @@
                       </tr>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/karang-taruna-6202162006"
-                            >KARANG TARUNA</a
-                          >
+                          <a href="">KARANG TARUNA</a>
                           <br />
                           <span class="label label-primary">KARANG TARUNA</span>
                         </td>
                         <td>
-                          <small></small>
+                          <small>Jl.</small>
                         </td>
                         <td class="text-center">
                           <img
@@ -277,17 +269,12 @@
                       </tr>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/lembaga-pemberdayaan-masyarakat-desa-6202162006"
-                            >LEMBAGA PEMBERDAYAAN MASYARAKAT DESA</a
-                          >
+                          <a href="">LEMBAGA PEMBERDAYAAN MASYARAKAT DESA</a>
                           <br />
                           <span class="label label-primary">LPMD</span>
                         </td>
                         <td>
-                          <small
-                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR
-                          </small>
+                          <small>JL. </small>
                         </td>
                         <td class="text-center">
                           <img
@@ -298,15 +285,12 @@
                       </tr>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/pemberdayaan-kesejahteraan-keluarga-6202162006"
-                            >PEMBERDAYAAN KESEJAHTERAAN KELUARGA</a
-                          >
+                          <a href="">PEMBERDAYAAN KESEJAHTERAAN KELUARGA</a>
                           <br />
                           <span class="label label-primary">PKK</span>
                         </td>
                         <td>
-                          <small>JL. BARITO RT 002 / RW 001</small>
+                          <small>JL.</small>
                         </td>
                         <td class="text-center">
                           <img
@@ -317,17 +301,12 @@
                       </tr>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/rukun-tetangga-dan-rukun-warga-6202162006"
-                            >RUKUN TETANGGA DAN RUKUN WARGA</a
-                          >
+                          <a href="">RUKUN TETANGGA DAN RUKUN WARGA</a>
                           <br />
                           <span class="label label-primary">RT DAN RW</span>
                         </td>
                         <td>
-                          <small
-                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR</small
-                          >
+                          <small>JL. </small>
                         </td>
                         <td class="text-center">
                           <img
@@ -338,17 +317,12 @@
                       </tr>
                       <tr>
                         <td>
-                          <a
-                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/satuan-perlindungan-masyarakat-6202162006"
-                            >SATUAN PERLINDUNGAN MASYARAKAT</a
-                          >
+                          <a href="">SATUAN PERLINDUNGAN MASYARAKAT</a>
                           <br />
                           <span class="label label-primary">LINMAS</span>
                         </td>
                         <td>
-                          <small
-                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR</small
-                          >
+                          <small>JL. </small>
                         </td>
                         <td class="text-center">
                           <img
