--- a/sarana.html
+++ b/sarana.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="owl.theme.default.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
+    <link rel="stylesheet" href="boot.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -146,7 +147,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -161,7 +162,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -187,7 +188,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
@@ -238,7 +239,7 @@
                   <!-- ## KANTOR DESA ## -->
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Kantor Desa</h5>
+                      <h5 class="panel-title">Kantor Desa</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -323,7 +324,7 @@
                   <!-- ## LEMBAGA PEMERINTAHAN ## -->
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">Lembaga Pemerintahan</h5>
+                      <h5 class="panel-title">Lembaga Pemerintahan</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -383,9 +384,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
-                        Sarana dan Prasarana PKK
-                      </h5>
+                      <h5 class="panel-title">Sarana dan Prasarana PKK</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
@@ -436,7 +435,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
+                      <h5 class="panel-title">
                         Sarana dan Prasarana Pendidikan
                       </h5>
                     </div>
@@ -663,7 +662,7 @@
                 <div class="col-md-6">
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
+                      <h5 class="panel-title">
                         Sarana dan Prasarana Peribadatan
                       </h5>
                     </div>
@@ -740,7 +739,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
+                      <h5 class="panel-title">
                         Sarana dan Prasarana Kesehatan
                       </h5>
                     </div>
@@ -1289,7 +1288,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
+                      <h5 class="panel-title">
                         Sarana dan Prasarana Air Bersih
                       </h5>
                     </div>
@@ -1374,9 +1373,7 @@
                   </div>
                   <div class="panel panel-primary">
                     <div class="panel-heading pt-none">
-                      <h5 class="panel-title bg-info">
-                        Sarana dan Prasarana Irigasi
-                      </h5>
+                      <h5 class="panel-title">Sarana dan Prasarana Irigasi</h5>
                     </div>
                     <div class="panel-body">
                       <table class="table table-striped table-preview">
