--- a/wilayah-desa.html
+++ b/wilayah-desa.html
@@ -54,7 +54,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -156,7 +156,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -182,7 +182,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
@@ -209,7 +209,7 @@
                   >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Pemerintahan
+                  Wilayah Desa
                 </li>
               </ol>
             </nav>
