--- a/berita.html
+++ b/berita.html
@@ -103,7 +103,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -151,7 +151,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -177,7 +177,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
