--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               alt="slide1"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h2>First slide label</h2>
+              <h2>,</h2>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -226,7 +226,7 @@
               alt="slide2"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h2>Second slide label</h2>
+              <h2>.</h2>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -236,7 +236,7 @@
               alt="slide3"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h2>Third slide label</h2>
+              <h2>.</h2>
             </div>
           </div>
         </div>
@@ -273,7 +273,7 @@
             border: none;
           "
         >
-          <div class="main-bar-menu col-md-6 col-sm-12 col-6 text-center py-3">
+          <div class="main-bar-menu col-md col-sm-6 col-6 text-center py-3">
             <a
               href="index.html"
               style="
@@ -319,7 +319,7 @@
           </div>
           <div class="main-bar-menu col-md col-sm-6 col-6 text-center py-3">
             <a
-              href="#galeri"
+              href="galeri.html"
               style="
                 text-decoration: none;
                 border: none;
@@ -852,7 +852,7 @@
                 <div
                   class="position-absolute top-50 start-50 translate-middle text-center w-100"
                 >
-                  <h5>Kantor Desa</h5>
+                  <h5>Rapat Warga</h5>
                   <span>Bumi Sejahtera</span>
                   <h6>kec. kaliorang Kutim</h6>
                 </div>
@@ -869,7 +869,7 @@
                 <div
                   class="position-absolute top-50 start-50 translate-middle text-center w-100"
                 >
-                  <h5>Kantor Desa</h5>
+                  <h5>Kegiatan Volly Warga</h5>
                   <span>Bumi Sejahtera</span>
                   <h6>kec. kaliorang Kutim</h6>
                 </div>
@@ -886,7 +886,7 @@
                 <div
                   class="position-absolute top-50 start-50 translate-middle text-center w-100"
                 >
-                  <h5>Kantor Desa</h5>
+                  <h5>Pembagian Bantuan</h5>
                   <span>Bumi Sejahtera</span>
                   <h6>kec. kaliorang Kutim</h6>
                 </div>
@@ -903,7 +903,7 @@
                 <div
                   class="position-absolute top-50 start-50 translate-middle text-center w-100"
                 >
-                  <h5>Kantor Desa</h5>
+                  <h5>Kegiatan</h5>
                   <span>Bumi Sejahtera</span>
                   <h6>kec. kaliorang Kutim</h6>
                 </div>
