--- a/layanan.html
+++ b/layanan.html
@@ -151,7 +151,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -163,7 +163,7 @@
               </ul>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="layanan.html">Layanan</a>
+              <a class="nav-link active" href="layanan.html">Layanan</a>
             </li>
             <li class="nav-item mx-2">
               <a class="nav-link" href="produk.html">Produk Hukum</a>
@@ -177,7 +177,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
