--- a/potensi-penduduk.html
+++ b/potensi-penduduk.html
@@ -144,7 +144,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -185,7 +185,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
