--- a/potensi-wilayah.html
+++ b/potensi-wilayah.html
@@ -144,7 +144,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -159,7 +159,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="perangkat.html"
+                  <a class="dropdown-item" href="potensi-wilayah.html"
                     >Potensi Wilayah</a
                   >
                 </li>
@@ -185,7 +185,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
