--- a/sejarah.html
+++ b/sejarah.html
@@ -49,7 +49,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -177,7 +177,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
